[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Player_idle/Player_idle1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Player_idle/Player_idle2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Player_jumpDownn/Player_jumpdown1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Player_jumpDownn/Player_jumpdown2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Player_jumpDownn/Player_jumpdown3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Player_jumpDownn/Player_jumpdown4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Player_jumpUp/Player2_jumpup1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Player_jumpUp/Player2_jumpup2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Player_jumpUp/Player2_jumpup3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Player_jumpUp/Player2_jumpup4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Player_jumpUp/Player2_jumpup5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Player_run/Player_Run1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Player_run/Player_Run2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Player_run/Player_Run3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Player_run/Player_Run4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Player_run/Player_Run5.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Player_run/Player_Run6.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Player_run/Player_Run7.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Player_run/Player_Run8.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Player_death/Player_death1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/Player_death/Player_death2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/Player_death/Player_death3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/Player_death/Player_death4.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/Player_death/Player_death5.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player/Player_death/Player_death6.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player/Player_death/Player_death7.png" type="Texture" id=27]
[ext_resource path="res://Assets/Player/Player_death/Player_death8.png" type="Texture" id=28]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=29]
[ext_resource path="res://Player/Inventory.tscn" type="PackedScene" id=30]
[ext_resource path="res://Player/BulletCollider.tscn" type="PackedScene" id=31]
[ext_resource path="res://Assets/Player/footstep.wav" type="AudioStream" id=32]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "jump",
"speed": 14.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "death",
"speed": 15.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 22.0
height = 12.0

[node name="Player" type="KinematicBody2D" groups=[
"damageable",
"players",
]]

input_pickable = true
collision_layer = 1
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Pickable", "Transform", "collision" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -4 )
frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="HitBox" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="HealthBar" parent="." index="2" instance=ExtResource( 29 )]

position = Vector2( 0, -38 )

[node name="Inventory" parent="." index="3" instance=ExtResource( 30 )]

[node name="InvulnTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="OneWayPlatformTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="BulletCollider" parent="." index="7" instance=ExtResource( 31 )]

visible = false
collision_mask = 0

[node name="Visibility" type="VisibilityNotifier2D" parent="." index="8"]

visible = false
rect = Rect2( -22, -28, 44, 56 )
_sections_unfolded = [ "Transform" ]

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 32 )
volume_db = -10.0
pitch_scale = 3.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]

[connection signal="timeout" from="InvulnTimer" to="." method="_on_InvulnTimer_timeout"]

[connection signal="timeout" from="OneWayPlatformTimer" to="." method="_on_OneWayPlatformTimer_timeout"]


